# qsofitmore

./: .gitignore  .gitmodules  CHANGES.txt  CITATION  CLAUDE.md  MIGRATION_PLAN_KMPFIT_TO_LMFIT.md  README.md  dev_guide.md  pyproject.toml  pytest.ini  requirements.txt  setup.py  tox.ini
.github/workflows/: migration-tests.yml
configs/: ppxf_qsofitmore_desi.yaml
docs/: neofit_plan.md  neofit_run_bundles.md  ppxf_qsofitmore_host_decomposition.md
qsofitmore/: __init__.py  auxmodule.py  config.py  extinction.py  fitmodule.py  line_params_io.py
qsofitmore/examples/: 1-make_parlist.ipynb  1a-make_parlist_log.ipynb  1b-edit_parlist_csv_yaml.ipynb  1b-generate_linear_parlist.ipynb  1c-edit_parlist_csv_yaml.ipynb  2-fit_qso_spectrum.ipynb  2-fit_qso_spectrum_dev.ipynb  2a-fit_qso_spectrum_log.ipynb  2b-fit_qso_spectrum_linear.ipynb
qsofitmore/ext_data/: Fe_Verner.txt
qsofitmore/host_decomp/: __init__.py  batch_ppxf_qsofitmore.py  config.py  dust.py  euclid.py  inspect_spectrum.py  io.py  plots.py  ppxf_host.py  ppxf_host_fit.py  predict_euclid_host.py  templates.py
qsofitmore/neofit/: __init__.py  api.py  batch.py  complex_recipes.py  config.py  generic_complex.py  global_fit.py  (+18 more)
tests/: __init__.py  conftest.py  test_continuum_fitting.py  test_host_decomp.py  test_host_decomp_integration.py  test_line_fitting.py  test_line_table_config.py  test_migration_integration.py  test_neofit_balmer_templates.py  test_neofit_gaussian_jacobian.py  test_neofit_global_complexes.py  test_neofit_global_workflow.py  test_neofit_host_workflow.py  test_neofit_import.py  test_neofit_iron_templates.py  test_neofit_line_complex_fit.py  test_neofit_local_mode.py  test_neofit_lorentzian.py  test_neofit_plotting.py  test_neofit_registry_workflow.py  test_neofit_run_store.py  test_neofit_spectrum.py  test_neofit_units.py  test_neofit_variable_projection.py  test_neofit_warnings.py  test_utilities.py
(+48 files in other folders)
